tests/bonsai/error/struct_duplicate_default.bonsai
element vec3f = vector[f32, 3];

element Ray {
    o = 2, d : vec3f = 1;
    t : f32 = 0;
}
